--- a/BuddyBeatApp/BuddyBeat/app/src/main/res/values/strings.xml
+++ b/BuddyBeatApp/BuddyBeat/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="play">Play</string>
     <string name="shuffle">Shuffle</string>
     <string name="workout_playlist">Workout Playlist</string>
-    <string name="album_6_songs_2024">Album - 6 songs - 2024</string>
+    <string name="album_6_songs_2024">Playlist - 2024</string>
     <string name="author">Author</string>
+    <string name="now_playing">Now playing</string>
+    <string name="add_playlist">Add Playlist</string>
+    <string name="add_song">Add Song</string>
 </resources>
